# data-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/da_api/: __init__.py  app.py  console.py  main.py  web.py
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: api.yaml
docs/: architecture-design.md
docs/design/: console-flows-mockup.html  semantic-matrix-mockup.html
examples/: demo_cx.py  semantic_export.json
tests/: conftest.py  test_api.py  test_api_streaming_auth.py  test_b_features.py  test_bootstrap_and_export.py  test_c_features.py  test_clickhouse_adapter.py  test_confirmation_and_learning.py  test_connectors_extended.py  test_console_ops.py  test_data_onboarding.py  test_e2e_scenario.py  test_eval_harness_and_reports.py  test_guard.py  test_lease_and_lock.py  test_metric_model.py  test_metric_resolver.py  test_metric_tree_and_stats.py  test_mining_and_evidence.py  test_playbooks_and_proactive.py  test_providers_production.py  test_runtime_checkpoint_heartbeat.py  test_semantic_ops.py  test_semantic_store.py  test_session_runtime.py
