[project]
name = "da-api"
version = "0.1.0"
description = "交付层 API：对话/回合、报告、管理控制台（架构文档 9）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "da-types",
    "da-governance",
    "da-connectors",
    "da-semantic",
    "da-agent",
    "da-runtime",
    "da-evals",
]

[tool.uv.sources]
da-types = { workspace = true }
da-governance = { workspace = true }
da-connectors = { workspace = true }
da-semantic = { workspace = true }
da-agent = { workspace = true }
da-runtime = { workspace = true }
da-evals = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/da_api"]
